# elev

./: .gitignore  LICENSE  Makefile  PKGBUILD  README.md  asroot.1  asroot.c  asroot.h  config.c  elev.1  elev.5  elev.7  elev.bash  elev.c  elev.h  elev.install  elev.pam  elev.zsh  flake.nix  meson.build  meson_options.txt  pam.c  util.c
